Added support for Disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ customize:
 
 # Plugins
 plugins:
+    disqus_shortname: # Disqus Comments Shortname
     google_analytics: UA-86660611-1 # enter the tracking ID for your Google Analytics
 
 # Miscellaneous
