changes settings to use site's config by default
To make this theme more customizable, rather than hacking the theme's config
file, I made all settings look to the site's config first and fallback on the
theme's defaults.

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ rss: false
 # Plugins
 plugins:
     disqus_shortname: # Disqus Comments Shortname
-    google_analytics: UA-86660611-1 # enter the tracking ID for your Google Analytics
+    google_analytics: # enter the tracking ID for your Google Analytics
 
 # Miscellaneous
 miscellaneous:
