--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,11 @@ customize:
         width: 50
         height: 50
         url: /images/logo.png
-        favicon: /images/favicon.png # path to favicon
+    favicon: 
+      # eg. generate with http://realfavicongenerator.net/
+      desktop: /images/favicon.ico
+      android: /images/favicon-192x192.png
+      apple: /images/apple-touch-icon.png
     social_links:
         github: http://github.com/probberechts/cactus-dark
         twitter: /
