add Isso a commenting server

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,8 @@ rss: false
 # Plugins
 plugins:
     disqus_shortname: # Disqus Comments Shortname
-    google_analytics: UA-86660611-1 # enter the tracking ID for your Google Analytics
+    google_analytics: # enter the tracking ID for your Google Analytics
+    isso_host: # enter your Isso host host/subdir ( eg. posativ.org/isso )  
 
 # Miscellaneous
 miscellaneous:
