Added local search feature.

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ nav:
   About: /about/
   Writing: /archives/
   Projects: http://github.com/probberechts
+  Search: /search/
 
 projects_url: http://github.com/probberechts
 
