Different default code highlighting for each theme
Closes #76

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ favicon:
 
 # The color scheme that should be used to highlight codeblocks.
 # See source/css/_highlight for a list of all available color schemes.
-highlight: rainbow
+# highlight: rainbow
 
 # Set the color scheme.
 # Available color schemes are 'dark', 'light', 'classic' and 'white'.
