--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # page within your website.
 projects_url: http://github.com/probberechts
 
-# Set the page direction to RTL or LTR. defoult is LTR. (if you set it 'rtl', the 'vazir' font will be loaded.)
+# Set the page direction to RTL or LTR. default is LTR. (if you set it 'rtl', the 'vazir' font will be loaded.)
 direction: ltr
 # Configure the navigation menu.
 # A pair 'Key: url' will result in a link to 'url' with the name 'Key' in the
