Added tagcloud option to the index page

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ nav:
 
 
 # Links to your social media accounts.
-# The keys should correspond to Fontawesome icon names 
+# The keys should correspond to Fontawesome icon names
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
 social_links:
@@ -31,6 +31,11 @@ social_links:
   linkedin: /
   mail: mailto:name@email.com
 
+# Customize the overview with displaying a tagcloud on the index page.
+# Options:
+#   - show_all_tags: whether to enable the tagcloud.
+tags_overview:
+  show_all_tags: true
 
 # Customize the overview with the most recent blog posts on the index page.
 # Options:
@@ -68,7 +73,7 @@ logo:
 # Options:
 #   - url: where the icon can be found
 #   - gravatar: whether to create a favicon from your Gravatar
-favicon: 
+favicon:
   desktop:
     url: /images/favicon.ico
     gravatar: false
@@ -100,7 +105,7 @@ page_width: 48
 rss: false
 
 # Turn your web pages into graph objects (see http://ogp.me).
-open_graph: 
+open_graph:
   fb_app_id:
   fb_admins:
   twitter_id:
@@ -112,12 +117,12 @@ open_graph:
 ##############################################################################
 
 # Fill in your Disqus Comments Shortname to enable Disqus comments.
-disqus: 
+disqus:
   enabled: false
   shortname: cactus-1
 
 # Fill in your Google Analytics tracking ID to enable Google Analytics.
-google_analytics: 
+google_analytics:
   enabled: false
   id: UA-86660611-1
 
