feat: add website record configuration

--- a/_config.yml
+++ b/_config.yml
@@ -133,6 +133,10 @@ baidu_analytics:
   enabled: true
   id: 4160e1fce9dfe5c73c5b98eb80cf7865
 
+record:
+  enabled: true
+  number: 鄂ICP备18007590号
+
 # Fill in you Gravatar user id / email if you want to use your gravatar as the
 # logo and/or favicons of you website.
 gravatar:
