--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Link to a page that gives an overview of all your projects.
 # This can be an external link (e.g., to you GitHub profile) or to another
 # page within your website.
-projects_url: http://github.com/probberechts
+projects_url: http://github.com/ninjaspl0it
 
 # Set the page direction to RTL or LTR. default is LTR. (if you set it 'rtl', the 'vazir' font will be loaded.)
 direction: ltr
@@ -18,6 +18,7 @@ nav:
   about: /about/
   articles: /archives/
   projects: https://github.com/ninjaspl0it
+  Revshells: /revshells
 
 
 # Links to your social media accounts.
@@ -42,7 +43,7 @@ tags_overview: true
 #   - sort_updated: sort posts by last modification date instead of creation date.
 posts_overview:
   show_all_posts: false
-  post_count: 15
+  post_count: 7
   sort_updated: false
 
 # Customize the archive view.
@@ -107,7 +108,7 @@ favicon:
 colorscheme: dark
 
 # Maximal width of the page in rem units.
-page_width: 48
+page_width: 60
 
 
 ##############################################################################
@@ -115,7 +116,7 @@ page_width: 48
 ##############################################################################
 
 # Enable or disable the RSS feed.
-rss: false
+rss: enable
 
 # Turn your web pages into graph objects (see http://ogp.me).
 open_graph:
@@ -132,7 +133,7 @@ open_graph:
 # Fill in your Disqus Comments Shortname to enable Disqus comments.
 disqus:
   enabled: false
-  shortname: cactus-1
+  shortname: xploit-1
 
 # Fill in your Google Analytics tracking ID to enable Google Analytics.
 google_analytics:
@@ -148,3 +149,9 @@ baidu_analytics:
 # logo and/or favicons of you website.
 gravatar:
   email: name@email.com
+
+
+# Security
+##
+encrypt:
+    enable: true
