--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ nav:
   about: /about/
   articles: /archives/
   projects: https://github.com/ninjaspl0it
-  Revshells: /revshells
+  revshells: /revshells
 
 
 # Links to your social media accounts.
@@ -43,7 +43,7 @@ tags_overview: true
 #   - sort_updated: sort posts by last modification date instead of creation date.
 posts_overview:
   show_all_posts: false
-  post_count: 7
+  post_count: 8
   sort_updated: false
 
 # Customize the archive view.
