--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ nav:
   articles: /archives/
   projects: https://github.com/ninjaspl0it
   revshells: /revshells
+  privesc: /tags/Privilege-Escalation
 
 
 # Links to your social media accounts.
